Better UX when shrinking the size of the New API page - templates boxes no longer overflow.  Fixes #511

--- a/front-end/studio/src/app/pages/apis/create/_components/create-form.component.css
+++ b/front-end/studio/src/app/pages/apis/create/_components/create-form.component.css
@@ -69,6 +69,8 @@ hr {
 .template-option-group {
   display: flex;
   flex-direction: row;
+  overflow-x: auto;
+  padding-bottom: 5px;
 }
 
 .template-option {
